<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="230dp"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1MAC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="22dp"
            android:text="LL2P Dest: "
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2DestAddValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1MAC"
            android:layout_alignBottom="@+id/textView1MAC"
            android:layout_toRightOf="@+id/textView1MAC"
            android:text="@string/NewMACdEST"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView1LL2PSRC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1MAC"
            android:text="LL2PSRC: "
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView1SRCMAC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1LL2PSRC"
            android:layout_alignBottom="@+id/textView1LL2PSRC"
            android:layout_toRightOf="@+id/textView1LL2PSRC"
            android:text="@string/srcMAC"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView1TYPE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1LL2PSRC"
            android:text="@string/TypeLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView1TypeVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView1TYPE"
            android:layout_toRightOf="@+id/textView1TYPE"
            android:text="@string/TypeValue"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1TypeVal"
            android:layout_alignBottom="@+id/textView1TypeVal"
            android:layout_alignRight="@+id/textView2DestAddValue"
            android:text="CRC: "
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2CRC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignBottom="@+id/textView1"
            android:layout_toRightOf="@+id/textView1"
            android:text="0000"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2Payload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1TypeVal"
            android:text="@string/Payload"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/AdjacencyTableLayout"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:layout_toRightOf="@+id/relativeLayout1"
        android:animateLayoutChanges="true"
        android:background="#FFD700" >

        <Button
            android:id="@+id/ADDbutton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/ADD" />

        <TextView
            android:id="@+id/MACtextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ADDbutton"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="31dp"
            android:text="@string/MACAddressLabel" />

        <TextView
            android:id="@+id/IPAddressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ADDbutton"
            android:layout_alignParentLeft="true"
            android:text="@string/IPAddressTextField" />

        <EditText
            android:id="@+id/MACeditText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/MACtextView3"
            android:layout_toLeftOf="@+id/ADDbutton"
            android:layout_toRightOf="@+id/MACtextView3"
            android:hint="@string/newMACAddress" />

        <EditText
            android:id="@+id/IPeditText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/IPAddressTextView"
            android:layout_alignLeft="@+id/MACeditText1"
            android:layout_alignRight="@+id/MACeditText1"
            android:hint="@string/newIPAddress" >

            <requestFocus android:layout_height="match_parent" />
        </EditText>

        <ListView
            android:id="@+id/TablelistView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/EchoRequest"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:entries="@array/TableOfAddress" >
        </ListView>

        <TextView
            android:id="@+id/EchoRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/MACtextView3"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="30dp"
            android:text="EchoPayload" />

        <EditText
            android:id="@+id/TypeEchoPayload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/EchoRequest"
            android:layout_alignBottom="@+id/EchoRequest"
            android:layout_toLeftOf="@+id/ADDbutton"
            android:layout_toRightOf="@+id/MACtextView3"
            android:ems="10"
            android:hint="TypeEchoMessage" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RoutingANDForwording"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_below="@+id/AdjacencyTableLayout"
        android:layout_marginTop="18dp" >

        <ListView
            android:id="@+id/Routinglist"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:entries="@array/RoutingList" >
        </ListView>

        <ListView
            android:id="@+id/Forwardinglist"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/Routinglist"
            android:background="#FFD700"
            android:entries="@array/ForwardingList" >
        </ListView>
    </RelativeLayout>

    
    <RelativeLayout
        
        android:id="@+id/LL3layout"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout2"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="21dp" >
       
        <TextView
            android:id="@+id/SRCLL3P"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="22dp"
            android:text="LL3P SRC: "
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/SRCLL3PValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/SRCLL3P"
            android:layout_alignBottom="@+id/SRCLL3P"
            android:layout_toRightOf="@+id/SRCLL3P"
            android:text="Unknown"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/LL3PDST"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/SRCLL3P"
            android:text="LL3P DST: "
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/LL3PDSTValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/LL3PDST"
            android:layout_alignBottom="@+id/LL3PDST"
            android:layout_toRightOf="@+id/LL3PDST"
            android:text="Unknown"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/LL3Ptype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/LL3PDST"
            android:text="TYPE: "
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/LL3PtypeVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/LL3Ptype"
            android:layout_toRightOf="@+id/LL3Ptype"
            android:text="Unknown"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/IDvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/IDLable"
            android:layout_alignBottom="@+id/IDLable"
            android:layout_toRightOf="@+id/IDLable"
            android:text="00"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/LL3PPayload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/LL3PtypeVal"
            android:text="Unknown"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/IDLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/LL3PPayload"
            android:layout_alignRight="@+id/LL3PDSTValue"
            android:text="ID: "
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
      </RelativeLayout>

    <RelativeLayout
        android:id="@+id/SendLL3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/LL3layout"
        android:layout_below="@+id/LL3layout" >

        <Button
            android:id="@+id/SendLL3ButtonID"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="SendLL3P" />

        <EditText
            android:id="@+id/destll3pValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:hint="destLL3" />
    </RelativeLayout>

   </RelativeLayout>